Implemented '/interfaces/bw_stats' endpoint
